--- a/lazybot.ipynb
+++ b/lazybot.ipynb
@@ -210,7 +210,18 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
