Fixed typos, added requirements.txt

--- a/lazybot.ipynb
+++ b/lazybot.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "promt = f\"Write a newspaer article about a reddit post with the title: {pickedPost.title}, posted by {pickedPost.author}; here are some comments people made on that post: \"\n",
+    "promt = f\"Write a newspaper article about a reddit post with the title: {pickedPost.title}, posted by {pickedPost.author}; here are some comments people made on that post: \"\n",
     "for comment in comments[0:5]:\n",
     "  promt += f\"{comment['author']} wrote { comment['comment'] }; \"\n",
     "print(f'Promt: {promt}')\n",
@@ -208,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "polyglot_notebook": {
